--- a/charts/microservice/templates/deployment.yaml
+++ b/charts/microservice/templates/deployment.yaml
@@ -106,3 +106,5 @@ spec:
               {{- end }}
             {{- end }}
           {{- end }}
+      serviceAccountName:  {{ .Values.name}}-sa
+      automountServiceAccountToken: {{ .Values.container.autoMountSAToken }}
