--- a/charts/microservice/templates/deployment.yaml
+++ b/charts/microservice/templates/deployment.yaml
@@ -107,4 +107,4 @@ spec:
             {{- end }}
           {{- end }}
       serviceAccountName:  {{ .Values.name}}-sa
-      automountServiceAccountToken: {{ .Values.container.autoMountSAToken }}
+      automountServiceAccountToken: {{ .Values.container.sa.autoMountSAToken }}
