--- a/charts/microservice/templates/secret-store-dockerhub.yaml
+++ b/charts/microservice/templates/secret-store-dockerhub.yaml
@@ -12,7 +12,7 @@ spec:
       auth:
         kubernetes:
           # El rol que creaste anteriormente en Vault
-          role: "dockerhub-role"
+          role: "{{ .Values.name }}-dockerhub-role"
           mountPath: "kubernetes"
           serviceAccountRef:
             name: "{{ .Values.name}}-sa"
