--- a/charts/microservice/templates/external-secret-dockerhub.yaml
+++ b/charts/microservice/templates/external-secret-dockerhub.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   refreshInterval: "24h" # Cada cuánto tiempo sincronizar con Vault
   secretStoreRef:
-    name: "{{ .Values.name }}-dockerhub-secret-store"
+    name: "{{ .Values.name }}-secret-store"
     kind: SecretStore
   target:
     name: "{{ .Values.name }}-image-pull-secret" # Este es el nombre final que usará tu App
