--- a/charts/microservice/templates/secret-store-dockerhub.yaml
+++ b/charts/microservice/templates/secret-store-dockerhub.yaml
@@ -1,7 +1,7 @@
 apiVersion: external-secrets.io/v1
 kind: SecretStore
 metadata:
-  name: "{{ .Values.name }}-dockerhub-secret-store"
+  name: "{{ .Values.name }}-secret-store"
   namespace: "{{ .Values.name }}"
 spec:
   provider:
