--- a/charts/microservice/values.yaml
+++ b/charts/microservice/values.yaml
@@ -73,7 +73,9 @@ container:
     enforceMountableSecrets: false
   envs:
 
-  tolerations: []
+tolerations: {}
+nodeSelector: {}
+affinity: {}
 
 autoscaling:
   enabled: false
