--- a/charts/microservice/values.yaml
+++ b/charts/microservice/values.yaml
@@ -23,7 +23,7 @@ container:
       allowPrivilegeEscalation: false
       runAsUser: 1000
       runAsGroup: 1000
-  command: ["/bin/sh"]
+  command: []
   args: []
   livenessProbe:
     path: actuator/health
