--- a/charts/microservice/values.yaml
+++ b/charts/microservice/values.yaml
@@ -71,6 +71,8 @@ container:
   sa:
     autoMountSAToken: false
     enforceMountableSecrets: false
+    name:
+  vaultRoleName:
   envs:
 
 tolerations: {}
