--- a/charts/microservice/templates/secret-store-dockerhub.yaml
+++ b/charts/microservice/templates/secret-store-dockerhub.yaml
@@ -12,8 +12,8 @@ spec:
       auth:
         kubernetes:
           # El rol que creaste anteriormente en Vault
-          role: "{{ .Values.name }}-dockerhub-role"
+          role: "{{ .Values.container.vaultRoleName }}"
           mountPath: "kubernetes"
           serviceAccountRef:
-            name: "{{ .Values.name}}-sa"
+            name: "{{ .Values.container.sa.name }}"
             #audience: "https://kubernetes.default.svc.cluster.local"
