--- a/charts/microservice/templates/secret.yaml
+++ b/charts/microservice/templates/secret.yaml
@@ -6,7 +6,7 @@ metadata:
   name: "{{ .Values.name }}-secret"
 type: Opaque
 stringData:
-  {{- range $key, $val := .Values.container.envs }}
+  {{- range $key, $val := base.envs }}
   {{ $key }}: {{ $val | quote }}
   {{- end }}
 {{- end }}
