--- a/charts/microservice/templates/secret.yaml
+++ b/charts/microservice/templates/secret.yaml
@@ -6,7 +6,5 @@ metadata:
   name: "{{ .Values.name }}-secret"
 type: Opaque
 stringData:
-  {{- range $key, $val := common.envs }}
-  {{ $key }}: {{ $val | quote }}
-  {{- end }}
+  {{- include "envs" . | nindent 2 }}
 {{- end }}
