--- a/charts/microservice/templates/deployment.yaml
+++ b/charts/microservice/templates/deployment.yaml
@@ -56,6 +56,11 @@ spec:
               mountPath: /usr/share/nginx/html/env-config.js
               subPath: env-config.js
             {{- end }}
+            {{- if .Values.configmap.enabled }}
+            - name: properties-vol
+              mountPath: /opt/administrabien/config/application.properties
+              subPath: application.properties
+            {{- end }}
           livenessProbe:
             {{- range $key, $value := .Values.container.livenessProbe }}
             {{- if eq $key "path" }}
@@ -145,7 +150,12 @@ spec:
         {{- if .Values.container.allowNginxEnvVars }}
         - name: env-config-vol
           configMap:
-            name: {{ .Values.name }}-env-config
+            name: nginx-configmap
+        {{- end }}
+        {{- if .Values.configmap.enabled }}
+        - name: properties-vol
+          configMap:
+            name: external-configmap
         {{- end }}
       serviceAccountName:  {{ .Values.name}}-sa
       automountServiceAccountToken: {{ .Values.container.sa.autoMountSAToken }}
